--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <html>
-
 <head>
   <title>Realtime Drawing</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,8 +29,8 @@
 </div>
 
 <script src="main.js"></script>
-<script async src="https://drv.tw/inc/wd.js"></script></body>
-
+<script async src="https://drv.tw/inc/wd.js"></script>
+</body>
 </html>
 
 
